--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,18 @@
+@import '~bootstrap/dist/css/bootstrap.css';
 
-/* 
+.bigCounter {
+    text-align: center;
+    background: black;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.bigCounter div {
+    display: inline-block;
+    font-size: 60px;
+    line-height: 60px;
+    background: #101010;
+    color: white;
+    padding: 10px;
+    margin: 3px;
+}
 
-*/
+
